--- a/doc-Managing_Providers/topics/manageiq-automate-role.adoc
+++ b/doc-Managing_Providers/topics/manageiq-automate-role.adoc
@@ -6,7 +6,7 @@ The `manageiq-automate` role allows users of {product-title} Automate to modify 
 
 [NOTE]
 ====
-When using this role in a playbook on a {product-title} appliance, add an empty roles directory at the root of the playbook. In the roles directory, include a requirements.yml file with the following contents:
+When using this role in a playbook on a {product-title} appliance with Embedded Ansible activated, add an empty roles directory at the root of the playbook. {product-title_short} will automatically install the role once it sees the requirements.yml file in the playbook. In the roles directory, include a requirements.yml file with the following contents:
 
 -----
 ---
@@ -16,7 +16,7 @@ When using this role in a playbook on a {product-title} appliance, add an empty 
 
 ==== Role Variables
 
-The `manageiq_automate` role employees the following variables when implemented in a playbook run on a {product-title_short} appliance. Variables are defined in `defaults/main.yml` and `vars/main.yml`. 
+The `manageiq_automate` role employs the following variables when implemented in a playbook run on a {product-title_short} appliance. Variables are defined in `defaults/main.yml` and `vars/main.yml`. 
 
 
 `auto_commit`: By default is set to `True`. If set to False it will not auto commit back to ManageIQ each call to a set_ method in the manageiq_automate module.
@@ -25,23 +25,9 @@ The `manageiq_automate` role employees the following variables when implemented 
 
 
 
-==== Installing the `manageiq-automate` role. 
-
-. ssh into the {product-title_short} appliance as `root`. 
-+
-------
-ssh root@<hostname or IP address>
-------
-+
-. Install the role using the `ansible galaxy` command.
-+
------
-ansible-galaxy install syncrou.manageiq-automate 
------
-
 ==== Example Playbook
 
-The example below utilizes the `manageiq-automate` role.  Using variable substitution, playbooks tasks retrieve  method parameters which are then used to modify object attributes. A final task uses the `set_retry` module to update the retry interval. 
+The example below utilizes the `manageiq-automate` role.  Using variable substitution, playbook tasks retrieve method parameters which are then used to modify object attributes. A final task uses the `set_retry` module to update the retry interval. 
 -----
 - name: Siphon Method Parameters into an object
   hosts: localhost
