--- a/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
@@ -6,7 +6,7 @@
 Linking VMs back to the service that created it requires implementing the following tasks in the playbook used for provisioning. 
 
 . Create a resource and register it.
-. Link the service using the 'add_provider_vms` method to the newly created resource. 
+. Link the service using the `add_provider_vms` method to the newly created resource. 
 
 
 
