--- a/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/installation.adoc
@@ -3,14 +3,16 @@
 
 {product-title} can be installed on OpenShift Container Platform in a few quick steps. 
 
-This procedure uses a template to deploy a multi-pod {product-title} appliance with the database stored in a persistent volume on OpenShift Container Platform. It provides a step-by-step setup, including cluster administrative tasks as well as basic user information and commands. 
+This procedure uses a template to deploy a multi-pod {product-title_short} appliance with the database stored in a persistent volume on OpenShift Container Platform. It provides a step-by-step setup, including cluster administrative tasks as well as basic user information and commands. 
 
-The ultimate goal of the deployment is to be able to deconstruct the {product-title} appliance into several containers running on a pod or a series of pods. 
+The ultimate goal of the deployment is to be able to deconstruct the {product-title_short} appliance into several containers running on a pod or a series of pods. 
+
+Running the {product-title_short} appliance in a series of pods has several advantages. For exeample, running each worker in a separate pod allows OpenShift Container Platform to manage worker processes and reduce memory consumption. OpenShift can also easily scale workers by adding or removing pods, and perform upgrades by using images (automatically?). (Built-in Health Check like probing HTTP?)
 
 [[prerequisites]]
 === Prerequisites
 
-To successfully deploy a {product-title} appliance on OpenShift Container Platform, you need a functioning *OpenShift Container Platform 3.5* or newer install with the following configured:
+To successfully deploy a {product-title_short} appliance on OpenShift Container Platform, you need a functioning *OpenShift Container Platform 3.7* install with the following configured:
 
 * NFS or other compatible volume provider
 * A `cluster-admin` user
@@ -18,19 +20,26 @@ To successfully deploy a {product-title} appliance on OpenShift Container Platfo
 
 [IMPORTANT]
 ====
-OpenShift Container Platform 3.5 is required for this installation. Red Hat has not tested this procedure with earlier versions of OpenShift Container Platform.
+OpenShift Container Platform 3.7 is required for this installation. Red Hat has not tested this procedure with earlier versions of OpenShift Container Platform.
 ====
 
 The {product-title_short} deployment uses three files to create the appliance: `cfme-template.yaml`, which is the {product-title_short} template used for the deployment, and `cfme-pv-example.yaml` and `cfme-pv-app-example.yaml`, two pod volume files. 
 
-These files create the OpenShift pods comprising the appliance, and are available from the Red Hat Container Catalog.
+These files create the OpenShift pods comprising the appliance, and are available from the https://access.redhat.com/containers/?product=Red%20Hat%20CloudForms%20#/search/cloudforms[Red Hat Container Catalog].
+
+//Download them first? Refer to another section for instructions?
+
+////
+
+
+Needs editing after GA?
 
 To download the files to your system, navigate to each of the following pages and click the *Get this image* tab. Select *OpenShift* from the *Choose your platform:* list, then follow the instructions on that page to pull the image:
 
 * https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-app[{product-title_short} appliance image]
 * https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-memcached[Memcached image]
 * https://access.redhat.com/containers/#/registry.access.redhat.com/cloudforms45/cfme-openshift-postgresql[PostgreSQL image]
-
+////
 
 /////
 OpenShift Container Platform 3.5 includes these files by default.
@@ -40,13 +49,23 @@ OpenShift Container Platform 3.5 includes these files by default.
 
 To avoid deployment failures due to resource starvation, Red Hat recommends the following minimum cluster size for a test environment:
 
-* 1 master node with at least 8 vCPUs and 12GB of RAM
-* 2 nodes with at least 4 vCPUs and 8GB of RAM
-* 25GB of storage for {product-title_short} physical volume use
+* 1 master node with at least 8 vCPUs and 12GB RAM
+* 2 schedulable nodes with at least 4 vCPUs and 8GB RAM
+* 25GB storage for {product-title_short} physical volume use
 
 These recommendations assume {product-title_short} is the only application running on this cluster. Alternatively, you can provision an infrastructure node to run registry, metrics, router, and logging pods.
 
-Each {product-title_short} application pod will consume at least 3GB of RAM on initial deployment (without providers added). RAM consumption increases depending on the appliance use. For example, after adding providers, expect higher resource consumption.
+Each {product-title_short} application pod will consume at least 3GB RAM on initial deployment (without providers added). RAM consumption increases depending on the appliance use. For example, after adding providers, expect higher resource consumption.
+
+==== Limitations
+
+The following limitations exist when deploying this version of {product-title_short} on OpenShift Container Platform 3.7:
+
+* This configuration cannot run on public OpenShift (OpenShift Online?) because of necessary privileges
+* The Embedded Ansible pod must run as a privileged pod
+* OpenShift cannot independently scale workers (details?)
+* A highly available database is not supported
+* Httpd + cfme-app set both do some LB (rewrite and explain)
 
 
 [[preparing-for-deployment]]
@@ -68,16 +87,77 @@ $ oc new-project <project_name> \
 --display-name="<display_name>"
 ------
 +
-. Add the `cfme-anyuid` service account to the `anyuid` security context constraint (SCC). 
+. Configure security context constraints (SCCs) for your OpenShift service accounts. The following table provides details on the SCCs:
 +
-Because the {product-title_short} image requires the root user, the `cfme-anyuid` service account for your namespace (project) must be added to the `anyuid` SCC before pods using the service account can run as root. 
+.Required Security Context Constraints (SCCs)
+[cols="1,1,1", frame="all", options="header"]
+|====
+|  Service Account|  Security Context Constraint (SCC)|  Description
+|  `cfme-anyuid`|`anyuid`|Allows pods using `cfme-anyuid` to run as root because the {product-title_short} image requires the root user.
+‎| `cfme-orchestrator`|`anyuid`|DESCRIPTION NEEDED
+|`cfme-privileged` | `privileged`| DESCRIPTION NEEDED
+| `cfme-httpd`| `anyuid`| DESCRIPTION NEEDED
+|`cfme-orchestrator` |`view` |DESCRIPTION NEEDED 
+|`cfme-orchestrator` |`edit` |DESCRIPTION NEEDED 
+|====
 +
-.. As the admin user, add the `cfme-anyuid` service account by running:
+To configure the SCCs, run the following commands as the admin user:
 +
-------
+.. Add the `cfme-anyuid` service account to the `anyuid` SCC:
++
+----
 $ oc adm policy add-scc-to-user anyuid system:serviceaccount:<your-namespace>:cfme-anyuid
-------
+----
 +
+.. Add the `cfme-orchestrator` service account to the `anyuid` SCC:
++
+----
+$ oc adm policy add-scc-to-user anyuid 
+System:serviceaccount:cloudforms:cfme-orchestrator
+----
++
+.. Add the `cfme-privileged` service account to the `privileged` SCC:
++
+----
+$ oc adm policy add-scc-to-user privileged 
+System:serviceaccount:cloudforms:cfme-privileged
+----
++
+.. Add the `cfme-httpd` service account to the `anyuid` SCC:
++
+----
+$ oc adm policy add-scc-to-user anyuid 
+System:serviceaccount:cloudforms:cfme-httpd
+----
++
+.. Add the `cfme-orchestrator` service account to the `view` SCC:
++
+----
+$ oc policy add-role-to-user view 
+system:serviceaccount:cloudforms:cfme-orchestrator -n cloudforms
+----
++
+.. Add the `cfme-orchestrator` service account to the `view` SCC (or give the `cfme-orchestrator` service account edit and view access?):
++
+----
+$ oc policy add-role-to-user edit 
+system:serviceaccount:cloudforms:cfme-orchestrator -n cloudforms
+----
++
+. Verify the SCCs are added correctly to the service accounts:
++
+----
+$ oc describe scc anyuid | grep Users
+Users:					system:serviceaccount:<your-namespace>:cfme-anyuid
+$ oc describe scc privileged | grep Users
+Users:                  system:serviceaccount:openshift-infra:build-controller,system:serviceaccount:management-infra:management-admin,system:serviceaccount:management-infra:inspector-admin,system:serviceaccount:default:router,system:serviceaccount:default:registry,system:serviceaccount:<your-namespace>:default
+----
++
+//TODO: Add more verification commands above.
+
+////
+
+MOVE VERIFY STEPS DOWN
 .. Verify that the `cfme-anyuid` service account is now included in the `anyuid` SCC:
 +
 ------
@@ -99,6 +179,7 @@ $ oc adm policy add-scc-to-user privileged system:serviceaccount:<your-namespace
 $ oc describe scc privileged | grep Users
 Users:                  system:serviceaccount:openshift-infra:build-controller,system:serviceaccount:management-infra:management-admin,system:serviceaccount:management-infra:inspector-admin,system:serviceaccount:default:router,system:serviceaccount:default:registry,system:serviceaccount:<your-namespace>:default
 ------
+////
 +
 . Prepare persistent storage for the deployment. (Skip this step if you have already configured persistent storage.) 
 +
@@ -161,9 +242,9 @@ $ systemctl restart atomic-openshift-master
 [[deploying-the-appliance]]
 === Deploying the {product-title_short} Appliance
 
-To deploy the appliance on OpenShift Container Platform, create the {product-title} template and verify it is available in your project. 
+To deploy the appliance on OpenShift Container Platform, create the {product-title_short} template and verify it is available in your project. 
 
-. As a basic user, create the {product-title} template: 
+. As a basic user, create the {product-title_short} template: 
 +
 ------
 $ oc create -f templates/cfme-template.yaml
@@ -190,13 +271,13 @@ To customize the deployment configuration parameters, run:
 $ oc edit dc/<deployconfig_name>
 ------
 +
-. To deploy {product-title} from template using default settings, run: 
+. To deploy {product-title_short} from template using default settings, run: 
 +
 ------
 $ oc new-app --template=cloudforms
 ------
 +
-Alternatively, to deploy {product-title} from a template using customized settings, add the `-p` option and the desired parameters to the command. For example: 
+Alternatively, to deploy {product-title_short} from a template using customized settings, add the `-p` option and the desired parameters to the command. For example: 
 +
 ------
 $ oc new-app --template=cloudforms -p DATABASE_VOLUME_CAPACITY=2Gi,MEMORY_POSTGRESQL_LIMIT=4Gi,APPLICATION_DOMAIN=hostname
@@ -233,14 +314,14 @@ $ oc new-app --template=cloudforms-ext-db -p DATABASE_IP=<server_ip> -p DATABASE
 [[verifying-the-configuration]]
 === Verifying the Configuration
 
-Verify the deployment was successful by running the following commands as a basic user under the {product-title} project:
+Verify the deployment was successful by running the following commands as a basic user under the {product-title_short} project:
 
 [NOTE]
 ====
 The first deployment can take several minutes to complete while OpenShift downloads the necessary images. 
 ====
 
-. Confirm the {product-title} pod is bound to the correct security context constraints. 
+. Confirm the {product-title_short} pod is bound to the correct security context constraints. 
 .. List and obtain the name of the `cfme-app` pod: 
 +
 ------
@@ -287,7 +368,7 @@ pods/cfme-1-s3bnp
 +
 [NOTE]
 ====
-Allow approximately five minutes once pods are in running state for {product-title} to start responding on HTTPS.  
+Allow approximately five minutes once pods are in running state for {product-title_short} to start responding on HTTPS.  
 ====
 +
 ----
@@ -347,7 +428,9 @@ memcached-1-mzeer    1/1       Running   0          1h
 postgresql-1-dufgp   1/1       Running   0          1h
 ----
 
-The newly created replicas will join the existing {product-title_short} region. For a StatefulSet with `N` replicas, when pods are being deployed, they are created sequentially, in order from {0..N-1}.
+The newly created replicas will join the existing {product-title_short} region. Each new pod is numbered in the order it is deployed, starting with 0 and increasing sequentially. For example, replicas in a StatefulSet will be numbered _cloudforms-0_ _cloudforms-1_, and so on.
+
+//Old wording - remove once new is OK. For a StatefulSet with `N` replicas, when pods are being deployed, they are created sequentially, in order from {0..N-1}.
 
 
 [[pod-access-and-routes]]
