add docs on playbooks for CF and service linking

--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -105,13 +105,13 @@ If both {product-title_short} and a VMware provider are located in the same IPv6
 . Click *Add*.
 
 
-include::Optimizing_Playbooks.adoc[]
 
 :leveloffset: 3
 include::Ansible_Credentials.adoc[]
 
+:leveloffset: 3
+include::Optimizing_Playbooks.adoc[]
 
-include::manageiq-automate-role.adoc[]
 
 :leveloffset: 1
 [[ansible-tower]]
