--- a/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
+++ b/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
@@ -1,4 +1,5 @@
-== Optimizing Ansible Playbooks for {product-title}
+[[optimizing-playbooks]]
+= Optimizing Ansible Playbooks for {product-title}
 
 Ansible is a simple model-driven configuration management, multi-node deployment, and remote-task execution system. When designing playbooks for use with {product-title_short} it is helpful to utilize solutions within the playbook itself to ensure optimal implementation of playbook-backed services or automated processes.  
 
@@ -7,4 +8,6 @@ This section is intended to compliment the existing documentation on Ansible pla
 include::Adding_Ansible_Galaxy_Roles.adoc[]
 
 include::Ansible_Service_Linking.adoc[]
+
+include::manageiq-automate-role.adoc[]
 
