--- a/doc-Managing_Providers/topics/Adding_Ansible_Galaxy_Roles.adoc
+++ b/doc-Managing_Providers/topics/Adding_Ansible_Galaxy_Roles.adoc
@@ -3,10 +3,10 @@
 === Installing Roles on an Embedded Ansible Appliance 
 
 Roles are ways of automatically loading certain variable files, tasks, and handlers based on a known file structure. Grouping content by roles also allows easy sharing of roles with other users. 
-Install roles on a {product-title} appliance utilizing Embedded Ansible to optimize playbooks. 
+Install roles on a {product-title} appliance with the Embedded Ansible server role activated to optimize playbooks. 
 
 
-When using this role in a playbook on a {product-title} appliance with Embedded Ansible activated, add an empty `roles` directory at the root of the playbook. In the `roles` directory, include a `requirements.yml` file with the following contents:
+When using this role in a playbook on a {product-title_short} appliance, add an empty `roles` directory at the root of the playbook. In the `roles` directory, include a `requirements.yml` file with the following contents:
  
 -----
 ---
