--- a/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
+++ b/doc-Managing_Providers/topics/Automation_Management_Providers.adoc
@@ -108,7 +108,8 @@ If both {product-title_short} and a VMware provider are located in the same IPv6
 :leveloffset: 3
 include::Ansible_Credentials.adoc[]
 
-include::manageiq-automate-role.adoc[]
+:leveloffset: 3
+include::Optimizing_Playbooks.adoc[]
 
 :leveloffset: 1
 [[ansible-tower]]
