--- a/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
+++ b/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
@@ -1,4 +1,4 @@
-[[optimizing-playbooksOPtimi]]
+[[optimizing-playbooks]]
 = Optimizing Ansible Playbooks for {product-title}
 
 Ansible is a simple model-driven configuration management, multi-node deployment, and remote-task execution system. When designing playbooks for use with {product-title_short} it is helpful to utilize solutions within the playbook itself to ensure optimal implementation of playbook-backed services or automated processes.  
