--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
@@ -55,7 +55,7 @@ image:6300.png[]
 +
 [IMPORTANT]
 ====
-The user creating a provisioning request must have an email address saved in their profile, or provisioning may fail. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/general_configuration/#creating_a_user[Creating a User] in _General Configuration_ for details on configuring users.
+A user creating a provisioning request must have an email address saved in their profile, or provisioning may fail. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/general_configuration/#creating_a_user[Creating a User] in _General Configuration_ for details on configuring users.
 ====
 +
 .. Set the values for *VM Warning Count*, *VM Maximum Count*, *Storage Warning Limit*, *Storage Maximum Limit*, *CPU Warning Count*, *CPU Maximum Count*, *Memory Warning Limit*, or *Memory Maximum Limit* to be the maximums for a specific user or group.
