--- a/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
@@ -3,22 +3,22 @@
 
 {product-title} provides a module allowing inventoried resources such as virtual machines created using Ansible playbooks to link back to the services used to generate them. During service ordering of a playbook the `add_provider_vms` module will allow the playbook to connect back to the worker appliance and identify the provider resources it was responsible for generating. Once linked, the newly generated resources are available to {product-title_short}'s life cycle management features.
 
-Linking VMs back to the service that created it requires implementing the following tasks in the playbook used for provisioning. 
+Linking VMs back to the service that created it requires implementing the following tasks in the playbook used for provisioning: 
 
 . Create a resource and register it.
 . Link the service using the `add_provider_vms` method to the newly created resource. 
 
 
 
-==== Example
+==== Example: Linking a virtual machine to a service
 
 In the following playbook task examples, a virtual machine is deployed to Amazon EC2 and linked back to the service. Examples are provided for linking the resource to its service by both an href slug and as an object. 
  
 [NOTE]
 ====
 * This example utilizes the `syncrou.manageiq-vmdb`role. This role allows {product-title_short} users to modify and/or change VMDB objects using an Ansible playbook. For information on implementing and utilizing roles when writing Ansible playbooks for {product-title_short}, see xref:installing-ansible-roles[]. 
-* For more information on Ansible Galaxy and roles, see the Ansible Galaxy documentation. 
-* Please note the provider ID in order to successfully link to the service. 
+* For more information on Ansible Galaxy and roles, see the http://docs.ansible.com/ansible/latest/galaxy.html[Ansible Galaxy documentation]. 
+* Note the provider ID in order to successfully link to the service. 
 ====
 
 . Create and register the resource.
@@ -39,7 +39,7 @@ In the following playbook task examples, a virtual machine is deployed to Amazon
   register: ec2
 -----
 +
-. Call the `add_provider_vms` method as an action to link to the service via an href slug.
+. Call the `add_provider_vms` method as an action to link to the service via an _href slug_ or an object.
 +
 -----
 - name: Service Linking via an href slug
@@ -51,11 +51,7 @@ In the following playbook task examples, a virtual machine is deployed to Amazon
         - "{{ ec2.instances[0].id }}"
       provider:
         id: 24
------
-+
-. Or, link to the service as an object.
-+
------
+
 - name: Service Linking via an object
   manageiq_vmdb:
     vmdb: "{{ vmdb_object }}"
