updated markdown on one item

--- a/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Service_Linking.adoc
@@ -12,7 +12,7 @@ Linking VMs back to the service that created it requires implementing the follow
 
 ==== Example: Linking a virtual machine to a service
 
-In the following playbook task examples, a virtual machine is deployed to Amazon EC2 and linked back to the service. Examples are provided for linking the resource to its service by both an href slug and as an object. 
+In the following playbook task examples, a virtual machine is deployed to Amazon EC2 and linked back to the service. Examples are provided for linking the resource to its service by both an _href slug_ and as an object. 
  
 [NOTE]
 ====
