api v3.0.0 - PR Review Changes.

--- a/api/appendices/deprecated_types.adoc
+++ b/api/appendices/deprecated_types.adoc
@@ -1,9 +1,10 @@
 
-[[deprecated-classes]]
-== Deprecated Classes
+[[deprecated-types]]
+== Deprecated Types
 
-This page lists the classes that have been deprecated in earlier releases and have
-been either renamed to newer class names or simply removed.
+This page lists the types that have been deprecated in previous releases and have
+been updated to newer types. They are _temporarily_ supported
+in the listed releases but will be removed in future releases.
 
 [[v240-v300]]
 === API v2.4.0 => v3.0.0
@@ -12,7 +13,7 @@ For Orchestration Templates:
 
 [cols="1,2",options="header",width="80%"]
 |========================================
-| Old Class Name | New Class Name
+| Old Type | New Type
 | OrchestrationTemplateAzure | ManageIQ::Providers::Azure::CloudManager::OrchestrationTemplate
 | OrchestrationTemplateHot   | ManageIQ::Providers::Openstack::CloudManager::OrchestrationTemplate
 | OrchestrationTemplateCfn   | ManageIQ::Providers::Amazon::CloudManager::OrchestrationTemplate
