--- a/api/examples/refresh_provider.adoc
+++ b/api/examples/refresh_provider.adoc
@@ -33,5 +33,5 @@ POST /api/providers/105
 ----
 
 _Note:_ In the above example a multi-manager provider was refreshed and in the response,
-a task id and href pair is returned for each of the provider manager. This allows the
+a task id and href pair is returned for each of the provider managers. This allows the
 caller to check the status of each manager refresh for completion.
