--- a/api/overview/versioning.adoc
+++ b/api/overview/versioning.adoc
@@ -39,7 +39,7 @@ Querying Floating IPs,
 Query and Delete Network Routers,
 Support set_miq_server action on VMs,
 Querying Cloud Subnets,
-Enabled paging by default,
+Enabled pagination by default,
 Delete Cloud Volumes,
 Support Configuration Script Payload subcollection,
 Removed Blueprint support,
