--- a/api/reference/automation_requests.adoc
+++ b/api/reference/automation_requests.adoc
@@ -2,7 +2,7 @@
 [[automation-requests]]
 == Automation Requests
 
-Automation requests are made available via the following entrypoint.
+Automation requests are made available via the following entrypoint:
 
 [source,data]
 ----
