--- a/api/reference/categories_tags.adoc
+++ b/api/reference/categories_tags.adoc
@@ -33,7 +33,7 @@ Querying all categories in the system is simply:
 GET /api/categories
 ----
 
-Or getting attributes of interest:
+Or getting attributes of interest like _name_, _description_ or _ns_ for the namespace:
 
 ----
 GET /api/categories?expand=resources&attributes=ns,name,description
