--- a/api/reference/custom_buttons.adoc
+++ b/api/reference/custom_buttons.adoc
@@ -10,7 +10,7 @@ Management of Custom Buttons is provided with the following collections:
 /api/custom_buttons
 ----
 
-* link:#custom-buttons-definitions[Managing Custom Button Sets]
+* link:#custom-button-sets[Managing Custom Button Sets]
   - link:#querying-custom-button-sets[Querying Custom Button Sets]
   - link:#creating-custom-button-sets[Creating Custom Button Sets]
   - link:#editing-custom-button-sets[Editing Custom Button Sets]
@@ -59,8 +59,7 @@ POST /api/custom_button_sets
     "button_color"     : "#4727ff",
     "display"          : true,
     "applies_to_class" : "GenericObjectDefinition",
-    "applies_to_id"    : "50",
-    }
+    "applies_to_id"    : "50"
   }
 }
 ----
