--- a/api/reference/metric_rollups.adoc
+++ b/api/reference/metric_rollups.adoc
@@ -14,7 +14,7 @@ Supported query parameters:
 [options=header,cols="2,4",width=80%]
 |======================
 | Parameter | Examples
-| resource_type | VmOrTemplate, Service
+| resource_type | VmOrTemplate, Service or any resource type that supports Metric Rollups
 | resource_ids | [id1,id2,id3, ...]
 | capture_interval | hourly, daily
 | start_date | 2018-01-10,  2018-01-10T11:20:00Z
