--- a/api/reference/network_routers.adoc
+++ b/api/reference/network_routers.adoc
@@ -9,7 +9,7 @@ Management of Network Routers is provided via the following collection:
 /api/network_routers
 ----
 
-The following actions are available on network_routers:
+The following actions are available on Network Routers:
 
 * link:#querying-network-routers[Querying Network Routers]
 * link:#deleting-network-routers[Deleting Network Routers]
@@ -17,7 +17,7 @@ The following actions are available on network_routers:
 [[querying-network-routers]]
 === Querying Network Routers
 
-Querying all network routers in the system is simply:
+Querying all Network Routers in the system is simply:
 
 ----
 GET /api/network_routers
@@ -34,6 +34,9 @@ GET /api/network_routers/:id
 
 Network Routers can be deleted via either the *delete* POST action or via the DELETE HTTP method.
 
+
+==== Request:
+
 ----
 POST /api/network_routers/101
 ----
@@ -42,6 +45,18 @@ POST /api/network_routers/101
 ----
 {
   "action" : "delete"
+}
+----
+
+==== Response:
+
+[source,json]
+----
+{
+  "success" : true,
+  "message" : "Deleting Networking Router id:101 name: 'test_network_router'",
+  "task_id" : "33",
+  "task_href" : "http://localhost:3000/api/tasks/33"
 }
 ----
 
