--- a/api/reference/pictures.adoc
+++ b/api/reference/pictures.adoc
@@ -84,7 +84,7 @@ GET /api/pictures?expand=resources
 
 This query does not return the pictures themselves, simply metadata about the pictures.
 
-Actually fetching the particular picture is by getting the image by its image_href.
+Actually fetching the particular picture is done by getting the image by its image_href.
 
 [source,data]
 ----
