--- a/api/reference/security_groups.adoc
+++ b/api/reference/security_groups.adoc
@@ -2,7 +2,7 @@
 [[security-groups]]
 == Security Groups
 
-Management of Security Groups is available via the following endpoint:
+Management of Security Groups is available via the following collection:
 
 [source,data]
 ----
@@ -58,7 +58,7 @@ GET /api/vms/:id/security_groups/:security_group_id
 [[managing-security-groups]]
 === Managing Security Groups
 
-Management of Security groups is available for Instances with the following actions:
+Management of Security Groups is available for Instances with the following actions:
 
 [cols="1,3",options="header",width="60%"]
 |=====================
@@ -70,7 +70,7 @@ Management of Security groups is available for Instances with the following acti
 [[add-security-groups]]
 === Add Security Group
 
-Security groups can be added to Instances individually:
+Security Groups can be added to Instances individually:
 
 [source,data]
 ----
