--- a/api/reference/service_dialogs.adoc
+++ b/api/reference/service_dialogs.adoc
@@ -196,7 +196,7 @@ POST /api/service_dialogs
 [[refreshing-dialog-fields-service-dialogs]]
 === Refreshing Dialog Fields of Service Dialogs
 
-Refreshing dialog fields for a service dialog is done as follows:
+Refreshing dialog fields for a Service Dialog is done as follows:
 
 ----
 POST /api/service_dialogs/:id
