--- a/api/reference/settings.adoc
+++ b/api/reference/settings.adoc
@@ -10,7 +10,7 @@ are provided with the following collection:
 /api/settings
 ----
 
-for the server processing the API, or specifically for a particular server, zone or region as follows:
+for the server processing the API, or for a particular server, zone or region as follows:
 
 [source,data]
 ----
