--- a/api/reference/custom_attributes.adoc
+++ b/api/reference/custom_attributes.adoc
@@ -2,7 +2,7 @@
 [[custom-attributes]]
 == Custom Attributes
 
-Custom Attributes can be managed for several types of Resources. This is done via the
+Custom Attributes can be managed for several types of resources. This is done via the
 custom_attributes sub-collection as follows:
 
 [cols="1,3",options="header",width="60%"]
@@ -34,7 +34,7 @@ GET /api/services/:id?expand=custom_attributes
 ----
 
 
-Optionally, just the custom attributes of a Resource can be queried:
+Optionally, just the custom attributes of a resource can be queried:
 
 ----
 GET /api/vms/:id/custom_attributes
