Updated all references to 'Beta' to their GA equivalent.
Conflicts:
	doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc

--- a/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on OpenShift Container Platform
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :experimental:
@@ -36,6 +36,7 @@ include::topics/troubleshooting.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
 
 
 
