--- a/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
+++ b/doc-Integration_with_OpenShift_Container_Platform/cfme/master.adoc
@@ -1,5 +1,5 @@
 = Integration with OpenShift Container Platform
-:vernum: 4.6-Beta
+:vernum: 4.6
 :doctype: article
 :imagesdir: images
 :toc: left
@@ -55,6 +55,7 @@ include::topics/provider-ose-add-container.adoc[]
 = Container Image Scanning
 
 include::topics/image-scanning.adoc[]
+
 
 
 
