--- a/doc-Policies_and_Profiles_Guide/cfme/master.adoc
+++ b/doc-Policies_and_Profiles_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Policies and Profiles Guide
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -41,5 +41,6 @@ include::topics/chap_events.adoc[]
 [[openscap]]
 === OpenSCAP Integration
 include::topics/OpenSCAP_Integration.adoc[]
+
 
 
