--- a/doc-Policies_and_Profiles_Guide/topics/revision_history.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/revision_history.adoc
@@ -2,7 +2,8 @@ Revision History
 ----------------
 
 1.0-0 Wed 23 Sep 2015 {product-title} Docs Team docs@redhat.com
-Initial creation for {product-title} 4.6-beta.
+Initial creation for {product-title} 4.6.
+
 
 
 
