--- a/doc-Scripting_Actions/cfme/master.adoc
+++ b/doc-Scripting_Actions/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Scripting Actions in CloudForms
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -24,3 +24,4 @@ include::topics/appe_objects.adoc[]
 include::topics/appe_faq_flows.adoc[]
 
 include::topics/appe_provision_request.adoc[]
+
