--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Microsoft Azure
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :experimental:
@@ -45,6 +45,7 @@ include::common/appe-appliance-console-cli.adoc[]
 [[storage-sku-types]]
 === Storage SKU Types
 include::topics/appendix.adoc[]
+
 
 
 
