--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Providers
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :doctype: book
 :toc: left
 :toclevels: 3
@@ -32,7 +32,7 @@ This guide covers working with providers and managers in {product-title_short}, 
 * Container providers
 * Storage managers
 
-For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6-beta/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
+For information on working with the resources contained by a provider or manager, see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/managing_infrastructure_and_inventory/[Managing Infrastructure and Inventory].
 
 
 :leveloffset: 1
@@ -65,4 +65,6 @@ include::topics/Storage_Managers.adoc[]
 = Appendix
 
 include::common/app-self_signed_CA.adoc[]
+
+
 
