--- a/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/topics/Fulfilling_Requests.adoc
@@ -52,6 +52,12 @@ By default, quotas are applied to tenants and do not require any change in menu:
 . Click image:1847.png[](*Configuration*), image:1851.png[](*Edit this instance*).
 image:6300.png[]
 .. Set the value for *Quota Source Type* to _user_ or _group_.
++
+[IMPORTANT]
+====
+A user creating a provisioning request must have an email address saved in their profile, or provisioning may fail. See https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/general_configuration/#creating_a_user[Creating a User] in _General Configuration_ for details on configuring users.
+====
++
 .. Set the values for *VM Warning Count*, *VM Maximum Count*, *Storage Warning Limit*, *Storage Maximum Limit*, *CPU Warning Count*, *CPU Maximum Count*, *Memory Warning Limit*, or *Memory Maximum Limit* to be the maximums for a specific user or group.
 . Click *Save*.
 
@@ -194,6 +200,7 @@ image:2356.png[]
 ===== Viewing a Virtual Machine or Instance Summary
 
 From menu:Services[Workloads], click the virtual machine or instance that you want to view.
+
 
 
 
