--- a/doc-REST_API/cfme/master.adoc
+++ b/doc-REST_API/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Red Hat CloudForms REST API
 :imagesdir: images
-:vernum: 4.6-Beta
+:vernum: 4.6
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -17,6 +17,7 @@ include::topics/chap-Specification.adoc[]
 include::topics/chap-Reference_Guide.adoc[]
 
 include::topics/chap-Examples.adoc[]
+
 
 
 
