--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2083,7 +2083,7 @@ To create a user:
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Users*.
 . Click image:1847.png[] (*Configuration*), and image:plus_green.png[] (*Add a new User*) to create a user.
-. Enter a *Full Name*, *Username*, *Password* with confirmation, and *Email Address* for the user.
+. Enter a *Full Name*, *Username*, *Password* with confirmation, and *Email Address* for the user.  An email address is required; omitting the user email address can result in unsuccessful provisioning requests.
 +
 image:available_groups.png[]
 +
