updated screenshots with new UI name - Access Restriction.. - and added a little more detail on the options to the Hiding Environment Variables procedure so no cross-referencing the GC guide is needed

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2210,10 +2210,10 @@ To create a role:
 . From the settings menu, select *Configuration*.
 . Click on the *Access Control* accordion, then click *Roles*.
 . Click image:1847.png[] (Configuration), and image:plus_green.png[] (Add a new Role). Alternatively, you can copy an existing role to a new role by clicking *Copy this to a new Role*.
-. In the *Role Information* area, type a name for the new role. For *VM & Template Access Restriction*, select if you want to limit users with this role to only see virtual machines owned by the user, owned by the user or its group, or all virtual machines.
-image:2095.png[]
-. Under *Product Features (Editing)*, navigate to the appropriate feature and enable or disable it.
-image:2096.png[]
+. In the *Role Information* area, type a name for the new role. For *Access Restriction for Services, VMs, and Templates*, select if you want to limit users with this role to only see resources owned by the user or their group, owned by the user, or all resources (*None*):
+image:Role_info.png[]
+. Under *Product Features (Editing)*, navigate to the appropriate feature and enable or disable it:
+image:Product_features_editing.png[]
 . Click *Add*.
 
 
