--- a/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
+++ b/doc-Managing_Providers/topics/Hide_Environment_Vars.adoc
@@ -19,7 +19,7 @@ To configure user access to container environment variables:
 +
 Alternatively, to create a new custom role, select a role from the *Access Control Roles* list, and click image:1847.png[] (*Configuration*), then image:1851.png[] (*Copy this Role to a new Role*).
 . Edit the name for the role if desired.
-. Select *None*, *Only User or Group Owned*, or *Only User Owned* from *Access Restriction for Services, VMs, and Templates*. 
+. For *Access Restriction for Services, VMs, and Templates*, select if you want to limit users with this role to only see resources owned by the user or their group, owned by the user, or all resources (*None*).
 . Expand the *Product Features (Editing)* tree options to show menu:Everything[Compute > Containers > Containers Explorer > All Containers > View Containers].
 . Clear the *Environment Variables* checkbox to restrict the user role from viewing container environment variables.
 +
