Added a note about creating service dialog from container template

--- a/common/create-container-template-catalog-item.adoc
+++ b/common/create-container-template-catalog-item.adoc
@@ -1,3 +1,7 @@
+[NOTE]
+====
+Before adding a new catalog item for container template provisioning, create a service dialog from container template. To do so, navigate to menu:Compute[Containers > Container Templates] and select the template for provisioning. Then, click image:1847.png[](*Configuration*), then image:1862.png[](*Create Service Dialog from Container Template*). You can use this service dialog when creating the container template catalog item.
+====
 
 Use the following procedure to create a Container Template catalog item.
 
